--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,29 @@
 /*  your css code here. If applicable */
+		*{
+            margin: 0;
+        }
+        body{
+            margin: 10%;
+
+        }
+        .card{
+            width: 200px;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            background-color: rgb(241,241,241);
+            box-shadow: 0px 5px 5px 1px rgba(128, 128, 128,.3);
+        }
+        img{
+            width: 100%;
+        }
+        button{
+            height: 35px;
+            width: 80px;
+            background-color: rgb(254,98,90);
+            color: white;
+            border-radius: 10px;
+            border: none;
+        }
